--- a/SoftwareBase.csproj
+++ b/SoftwareBase.csproj
@@ -2,6 +2,8 @@
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
+    <OutputType>Library</OutputType>
+    <Version>1.1.0</Version>
   </PropertyGroup>
 
 </Project>
