--- a/SoftwareBase.csproj
+++ b/SoftwareBase.csproj
@@ -6,4 +6,8 @@
     <Version>1.1.0</Version>
   </PropertyGroup>
 
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
+    <DocumentationFile>D:\Development\Projects\C#\SoftwareBase\SoftwareBase\SoftwareBase.xml</DocumentationFile>
+  </PropertyGroup>
+
 </Project>
