--- a/SoftwareBase.csproj
+++ b/SoftwareBase.csproj
@@ -3,7 +3,11 @@
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
     <OutputType>Library</OutputType>
-    <Version>1.1.0</Version>
+    <Version>1.3.1.1</Version>
+    <AssemblyVersion>1.3.1.1</AssemblyVersion>
+    <SignAssembly>true</SignAssembly>
+    <AssemblyOriginatorKeyFile>Dennis Schröter.pfx</AssemblyOriginatorKeyFile>
+    <FileVersion>1.3.1.1</FileVersion>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
